# gramps-rs

./: Cargo.toml  LICENSE.txt  README.md
examples/: deserialise.rs  serialise.rs
gramps_xml/: Cargo.toml  README.md
gramps_xml/examples/: deserialise.rs  manipulate.rs  serialise.rs
gramps_xml/src/: lib.rs  types.rs
src/: main.rs  types.rs
